<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ideas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="user_name">昵称</string>
    <string name="set_phone">请设置你的手机号</string>
    <string name="set_password">设置密码</string>
    <string name="register">注册</string>
    <string name="now_login">已有账号？马上登录</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_num">请输入手机号码</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pw">忘记密码？</string>
    <string name="regist_user">注册账号</string>
    <string name="reset_pw">重置密码</string>
    <string name="finish">完成</string>
    <string name="questioned">提问</string>
    <string name="answered">回答</string>
    <string name="collected">收藏</string>
    <string name="home">主题站</string>
    <string name="community">社区</string>
    <string name="ideas">ideas</string>
    <string name="my">我的</string>
    <string name="nonlogin">未登录</string>
    <string name="nothing">暂无描述</string>
    <string name="_0">0</string>

</resources>
