<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        app:layout_heightPercent="35%h" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            app:layout_heightPercent="46%h"
            app:layout_widthPercent="27%w"
            android:contentDescription="@string/todo"
            android:src="@drawable/user_bg" />
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        app:layout_heightPercent="65%h" >

        <!-- 手机号码 -->

        <ImageView
            android:id="@+id/img_reset_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:layout_heightPercent="12%h"
            app:layout_marginLeftPercent="11%w"
            app:layout_widthPercent="8%w"
            android:contentDescription="@string/todo"
            android:src="@drawable/phone" />

        <EditText
            android:id="@+id/edt_reset_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/img_reset_phone"
            app:layout_heightPercent="14%h"
            app:layout_marginLeftPercent="11%w"
            app:layout_widthPercent="70%w"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:maxLength="11" />

        <!-- 验证码 -->

        <ImageView
            android:id="@+id/img_reset_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/img_reset_phone"
            app:layout_heightPercent="12%h"
            app:layout_marginLeftPercent="10%w"
            app:layout_marginTopPercent="16%w"
            app:layout_widthPercent="11%w"
            android:contentDescription="@string/todo"
            android:src="@drawable/code" />

        <EditText
            android:id="@+id/edt_reset_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/edt_reset_phone"
            android:layout_alignTop="@+id/edt_reset_phone"
            app:layout_heightPercent="14%h"
            app:layout_marginTopPercent="16%w"
            app:layout_widthPercent="70%w"
            android:hint="@string/code"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_reset_code"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignRight="@+id/edt_reset_code"
            android:layout_alignTop="@+id/img_reset_code"
            app:layout_heightPercent="12%h"
            android:text="@string/get_code" />

        <!-- 重置密码 -->

        <ImageView
            android:id="@+id/img_reset_pw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/img_reset_code"
            app:layout_heightPercent="12%h"
            app:layout_marginLeftPercent="10%w"
            app:layout_marginTopPercent="16%w"
            app:layout_widthPercent="11%w"
            android:contentDescription="@string/todo"
            android:src="@drawable/password" />

        <EditText
            android:id="@+id/edt_reset_pw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/edt_reset_code"
            android:layout_alignTop="@+id/edt_reset_code"
            app:layout_heightPercent="14%h"
            app:layout_marginTopPercent="16%w"
            app:layout_widthPercent="70%w"
            android:hint="@string/reset_pw"
            android:inputType="textPassword"
            android:maxLength="16" />

        <ImageButton
            android:id="@+id/ibtn_reset_invisible"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignRight="@+id/edt_reset_pw"
            android:layout_alignTop="@+id/img_reset_pw"
            app:layout_heightPercent="7%h"
            app:layout_marginTopPercent="3%w"
            app:layout_widthPercent="10%w"
            android:background="@drawable/invisible"
            android:contentDescription="@string/todo" />

        <!-- 成功 -->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/img_reset_pw"
            android:layout_centerHorizontal="true"
            app:layout_heightPercent="15%h"
            app:layout_marginTopPercent="28%w"
            app:layout_widthPercent="80%w"
            android:background="@drawable/shape"
            android:text="@string/finish"
            android:textColor="#FFFFFF" />
    </android.support.percent.PercentRelativeLayout>

</android.support.percent.PercentRelativeLayout>